# rust-movie-rec-engine

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/data-loader/: Cargo.toml
crates/data-loader/examples/: benchmark_load.rs
crates/data-loader/src/: error.rs  index.rs  lib.rs  parser.rs  types.rs
crates/ml-client/: Cargo.toml  build.rs
crates/ml-client/src/: lib.rs
crates/pipeline/: Cargo.toml  IMPLEMENTATION_GUIDE.md
crates/pipeline/src/: features.rs  filter_pipeline.rs  lib.rs  traits.rs
crates/pipeline/src/filters/: already_watched.rs  genre_preference.rs  minimum_rating.rs  mod.rs  recency.rs
crates/pipeline/tests/: integration_test.rs
crates/server/: Cargo.toml  IMPLEMENTATION_GUIDE.md  README.md
crates/server/src/: lib.rs  main.rs  orchestrator.rs
crates/sources/: Cargo.toml
crates/sources/benches/: candidate_generation.rs
crates/sources/examples/: generate_candidates.rs
crates/sources/src/: lib.rs  phoenix.rs  thunder.rs  types.rs  user_context.rs
proto/: recommendations.proto
python/: README.md  ml_service.py  model.py  pyproject.toml  requirements.txt  train_model.py
