[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reel-recs"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Your crates
data-loader = { path = "../data-loader" }
server = { path = "../server" }

# Formatting and colors (optional, for nice output)
colored = "2.1"
rand = "0.9.2"
