[package]
name = "ml-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC dependencies
tonic = "0.10"
prost = "0.12"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

[build-dependencies]
tonic-build = "0.10"
